Add audit logging and defaults
Signed-off-by: Tanner Lewis <lewijacn@amazon.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 !jest.config.js
 *.d.ts
 node_modules
+cdk.context.json
 
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+# Intellij
+.idea
