--- a/package.json
+++ b/package.json
@@ -1,27 +1,70 @@
 {
   "name": "opensearch-service-domain-cdk",
+  "description": "CDK infrastructure for deploying search clusters to AWS",
   "version": "0.1.0",
-  "bin": {
-    "opensearch-service-domain-cdk": "bin/opensearch-service-domain-cdk.js"
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aws-samples/amazon-opensearch-service-sample-cdk.git",
+    "directory": "/"
+  },
+  "bugs": {
+    "url": "https://github.com/aws-samples/amazon-opensearch-service-sample-cdk/issues"
+  },
+  "homepage": "https://github.com/aws-samples/amazon-opensearch-service-sample-cdk#readme",
+  "engines": {
+    "node": ">=18"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
+    "test": "npm run test:lint && npm run test:jest",
+    "test:lint": "eslint .",
+    "test:jest": "jest  --coverage",
+    "clean": "rm -rf dist",
+    "release": "npm run build",
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.5",
-    "@types/node": "18.11.18",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "aws-cdk": "2.62.2",
+    "@eslint/js": "^9.31.0",
+    "@types/eslint__js": "^9.14.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "24.0.15",
+    "@types/node-forge": "^1.3.13",
+    "aws-cdk": "2.1021.0",
+    "aws-cdk-lib": "2.206.0",
+    "constructs": "^10.4.2",
+    "eslint": "^9.31.0",
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.4"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.37.0"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.62.2",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "esbuild": "^0.25.8",
+    "node-forge": "^1.1.0",
+    "source-map-support": "^0.5.21",
+    "yaml": "^2.8.0"
+  },
+  "peerDependencies": {
+    "aws-cdk-lib": "^2.150.0",
+    "constructs": "^10.4.2"
+  },
+  "overrides": {
+    "semver": "^7.7.1"
   }
 }
