--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         npm-project:
-          - /
+          - '.'
     defaults:
       run:
         working-directory: ${{ matrix.npm-project }}
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ env.node-version }}
       - name: Install NPM dependencies
         run: npm ci
-      - name: Run CDK Jest Tests (using mocked images)
+      - name: Run CDK Jest Tests
         run: npm run test
 
   link-checker:
