--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,15 +36,15 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v2
         with:
-          args: --verbose --accept=200,403,429  "**/*.html" "**/*.md" "**/*.txt" "**/*.json"
-            --offline
-            --exclude "file:///github/workspace/*"
+          args: >-
+            --verbose
+            --accept=200,403,429
             --exclude "http://localhost*"
             --exclude "https://localhost*"
-            --exclude-mail
+            "**/*.html" "**/*.md" "**/*.txt" "**/*.json"
           fail: true
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
   all-ci-checks-pass:
